# ReductionResnet

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  setup.py
custom_average.egg-info/: SOURCES.txt  top_level.txt
inference/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
inference/src/: custom_average.cpp  setup.py
inference/src/custom_average.egg-info/: PKG-INFO  SOURCES.txt
research/: ReductionResnet.ipynb  challenge_images.csv
research/.ipynb_checkpoints/: ReductionResnet-checkpoint.ipynb
